# Waveshare-ESP32-S3-Touch-LCD-4.3-main

./: partitions.csv  platformio.ini
lib/: lv_conf.h
lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
lib/ui/src/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_imgbutton1.c  ui_comp_imgbutton1.h
lib/ui/src/images/: ui_img_322054780.c  ui_img_checkengine_png.c  ui_img_dcs_png.c  ui_img_fuel_png.c  ui_img_parkingbrake_png.c  ui_img_speedbg_png.c  ui_img_speedfg_png.c  ui_img_turnsignal_png.c  ui_img_watertemp_png.c
lib/ui/src/screens/: ui_Screen1.c  ui_Screen1.h
squareline/: waveshare43-minimal.sll  waveshare43-minimal.spj
src/: main.cpp
test/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
test/components/: ui_comp_hook.c
test/screens/: ui_FirstScreen.c  ui_FirstScreen.h  ui_SecondScreen.c  ui_SecondScreen.h
